# httpserializers

./: README.md  demo.py  requirements-dev.in  requirements-dev.txt  setup.cfg  tox.ini
httpserializers/: __init__.py  coreapi_serializer.py  corejson_serializer.py  hal_serializer.py  html_serializer.py  json_home_serializer.py  json_serializer.py  ld_serializer.py  registry.py  types.py  utils.py
tests/: test_coreapi.py  test_corejson.py  test_hal.py  test_html.py  test_json.py  test_json_home.py  test_serializers.py  test_utils.py
