[metadata]
name = httpserializers
# Format is YY.MM.patch (see https://calver.org/)
version = 20.1.0
description = Describes and serializes HTTP responses.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Julien Palard
author_email = julien@palard.fr
url = https://github.com/meltygroup/httpserializers
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >= 3.6
install_requires =
  werkzeug
  jinja2
